# Youtube_Downloader

./: .gitignore  README.md  asd.txt  config.py  main.py  pppp.py  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
src/window/: app.py  buttons.py  entries.py  labels.py  menu.py  widgets.py
src/window/buttons_funcionalities/: add_entry.py  clear_entries.py  close_window.py  download_videos.py  open_urls.py
src/window/widgets/: buttons.py  entries.py  labels.py  menu.py  only_audio_check.py  options_menu.py  progress_bar.py
src/youtube/: audio_downloader.py  on_progress.py  output_filename.py  video_downloader.py
src/youtube/utils/: clean_url.py  create_folder.py  on_progress.py  output_filename.py
