[tool.poetry]
name = "youtube-downloader"
version = "1.0"
description = "Youtube downloadr with customTkinter library"
authors = ["Alex Algarate <alex.algarate@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "youtube_downloader"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
altgraph = "0.17.3"
black = "24.3.0"
click = "8.1.3"
colorama = "0.4.6"
customtkinter = "5.2.0"
darkdetect = "0.8.0"
flake8 = "6.0.0"
isort = "5.12.0"
linecache2 = "1.0.0"
mccabe = "0.7.0"
mypy-extensions = "1.0.0"
packaging = "23.1"
pathspec = "0.11.1"
pefile = "2023.2.7"
platformdirs = "3.6.0"
pycodestyle = "2.10.0"
pyflakes = "3.0.1"
pyinstaller = "5.12.0"
pyinstaller-hooks-contrib = "2023.3"
pytube = "15.0.0"
pywin32-ctypes = "0.2.1"
ruff = "0.0.275"
six = "1.16.0"
tomli = "2.0.1"
traceback2 = "1.4.0"
unittest2 = "1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.ruff]
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
ignore = ["E402"]
include = ["*.py"]